--- a/backend/package.json
+++ b/backend/package.json
@@ -15,16 +15,19 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.1",
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^8.3.2",
     "morgan": "^1.10.0",
-    "redis": "^4.6.7"
+    "redis": "^4.6.7",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "jest": "^29.6.1",
