--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
